# Cardputer-Home-Controler

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-TW.md  CONTRIBUTING.md  CONTRIBUTING.zh-TW.md  LICENSE  README.md  README.zh-TW.md  SECURITY.md  SECURITY.zh-TW.md  SUPPORT.md  SUPPORT.zh-TW.md  THIRD_PARTY.md  probe.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  hardware_compatibility.yml
.github/workflows/: ci.yml
docs/: hardware-acceptance.md  rg57a-mapping.md
firmware/: README.md  platformio.ini
firmware/include/: ConfigStore.h  SetupPortal.h
firmware/include/adapters/: DysonAdapter.h  IrAdapter.h  TapoAdapter.h
firmware/include/core/: CommandDispatcher.h  CommandQueue.h  Config.h  DeviceAdapter.h  EventBuffer.h  Models.h  PowerPolicy.h  ProtocolHelpers.h  StateReducer.h  TimeUtils.h
firmware/src/: ConfigStore.cpp  SetupPortal.cpp  main.cpp
firmware/src/adapters/: DysonAdapter.cpp  IrAdapter.cpp  TapoAdapter.cpp
firmware/test/test_core/: test_main.cpp
scripts/: build-firmware.ps1  setup.ps1  verify-firmware-discovery.py
src/cardputer_probe/: __init__.py  cli.py  dyson.py  dyson_mqtt.py  dyson_protocol.py  errors.py  redaction.py  report.py  tapo.py
tests/: test_cli.py  test_diagnostics.py  test_dyson_auth.py  test_dyson_protocol.py  test_live_probe_simulation.py  test_redaction.py  test_report.py
